<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvVersionAndroidLB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvVersionAndroidLB" />

        <TextView
            android:id="@+id/tvVersionAndroid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvVersionAndroid" />

        <TextView
            android:id="@+id/tvLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvLight" />

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            >

        <Button
            android:id="@+id/btnOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnOn" />

        <Button
            android:id="@+id/btnOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnOff" />

        </TableRow>

        <TextView
            android:id="@+id/tvLevelBatteryLB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvLevelBatteryLB" />

        <ProgressBar
            android:id="@+id/pbLevelBattery"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/etNameFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etNameFile"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/etNameFile" />

        <ImageButton
            android:id="@+id/btnSaveFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_star"
            />

        <TextView
            android:id="@+id/tvConnectionLB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvConnectionLB"/>

        <TextView
            android:id="@+id/tvConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvConnection"/>

</LinearLayout>